--- a/client/cat/bio/bio.scss
+++ b/client/cat/bio/bio.scss
@@ -28,6 +28,7 @@
 	&:hover
 	{
 		color: $orange;
+		cursor: pointer;
 	}
 }
 
@@ -53,7 +54,8 @@
 	left: 10px;
 	right: 10px;
 	bottom: 10px;
-	background: {
+	background: 
+	{
 		color: rgba(black, 0.8);
 	}
 
@@ -64,10 +66,9 @@
 		margin: 0;
 	}
 
-	transition: all 0.2s ease-in-out;
 	&:hover
 	{
-		cursor: default;
+		cursor: pointer;
 	}
 }
 
